--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row">
           <p><a href="https://www.linkedin.com/in/ema-djedovic/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></p>
           <p><a href="https://www.facebook.com/profile.php?id=100081307220041" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
-          <p><a href="https://github.com/emadjedovic" target="_blank"><i class="bi bi-github" aria-hidden="true"></i></a></p>
+          <p><a href="https://github.com/emadjedovic" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></p>
         </div>
       
       </div>
