--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       </div>
 
-      <div class="col aside" id="aside-desno"> <!--zeza ovo aside, poremeti se kad aside-lijevo nestane?-->
+      <div class="col aside" id="aside-desno">
 
         <div class="row"><img id="slikaProfesora" alt="osoba_x" width="140"></div>
         <div class="row" id="kontejner-rezultata">
